# colobot

./: CMakeLists.txt  meson.build  meson_options.txt  vcpkg.json
.github/workflows/: build.yml
po/: install_compiled_translations.py  meson.build  update_pot.py
src/: CMakeLists.txt  meson.build
src/CBot/: CBotDebug.cpp  meson.build
src/app/: app.cpp  input.cpp  main.cpp  pathman.cpp  pausemanager.cpp
src/common/: config_file.cpp  font_loader.cpp  meson.build
src/common/resources/: resourcemanager.cpp
src/common/system/: system.cpp  system_linux.cpp  system_macosx.cpp  system_windows.cpp
src/core/: meson.build  stringutils.cpp
src/graphics/engine/: engine.cpp  oldmodelmanager.cpp  text.cpp
src/graphics/model/: model_mod.cpp  model_txt.cpp
src/graphics/opengl/shaders/: meson.build
src/level/: robotmain.cpp  scoreboard.cpp
src/level/parser/: parser.cpp  parserparam.cpp  parserparam.h
src/object/: object.cpp  old_object.cpp
src/object/auto/: autofactory.cpp  autoportico.cpp
src/object/implementation/: program_storage_impl.cpp
src/object/motion/: motionvehicle.cpp
src/object/subclass/: exchange_post.cpp  exchange_post.h
src/script/: script.cpp  scriptfunc.cpp
src/tools/: meson.build
src/ui/: debug_menu.cpp  displayinfo.cpp
src/ui/controls/: control.cpp  edit.cpp  interface.cpp  key.cpp  slider.cpp
src/ui/screen/: screen_io.cpp  screen_mod_list.cpp  screen_player_select.cpp  screen_setup.cpp  screen_setup_display.cpp  screen_setup_game.cpp  screen_setup_graphics.cpp  screen_setup_sound.cpp  screen_welcome.cpp
subprojects/: .gitignore  colobot-data.wrap  dlfcn-win32.wrap  glew.wrap  hippomocks.wrap  icu.wrap  libintl.wrap  libpng.wrap  libsndfile.wrap  openal-soft.wrap  physfs.wrap  sdl2.wrap  sdl2_image.wrap  sdl2_ttf.wrap  simpleini.wrap  wingetopt.wrap
subprojects/libpng-1.6.39/: meson.build
subprojects/localename/: meson.build
subprojects/packagefiles/SDL2-diff/: 001.patch
subprojects/packagefiles/SDL2_image-diff/: 001.patch
subprojects/packagefiles/SDL2_ttf-diff/: 001.patch
subprojects/packagefiles/colobot-data-patch/: grabber.py  install_generated_files.py  meson.build  meson_options.txt
subprojects/packagefiles/colobot-data-patch/help/: meson.build
subprojects/packagefiles/colobot-data-patch/levels/: meson.build
subprojects/packagefiles/colobot-data-patch/music/: meson.build
subprojects/packagefiles/glew-diff/: 001.patch
subprojects/packagefiles/hippomocks-patch/: meson.build
subprojects/packagefiles/libintl-patch/: meson.build  meson.options
subprojects/packagefiles/libpng-diff/: 001.patch
subprojects/packagefiles/libsndfile-diff/: 001.patch
subprojects/packagefiles/physfs-diff/: 001.patch
subprojects/packagefiles/simpleini-patch/: meson.build
test/: meson.build
test/cbot/: meson.build
test/unit/: meson.build
