cbot_console_exe = executable(
    'CBot_console',
    sources: [ 'console.cpp' ],
    dependencies: [ int_libcbot_dep, int_libcolobotbase_dep ] # TODO Get rid of libcolobotbase dep
)

cbot_compile_graph_exe = executable(
    'CBot_compile_graph',
    sources: [ 'compile_graph.cpp' ],
    dependencies: [ int_libcbot_dep ]
)
